--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 88f1a77
+	base = ecf3d32
 	trimbase = 
 	parent = release/kinetic/ddynamic_reconfigure_python
-	previous = 
+	previous = 88f1a77
