--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 28ba4cf
+	base = 88a2f0f
 	trimbase = 
 	parent = arch/kinetic/ddynamic_reconfigure_python
-	previous = 
+	previous = 28ba4cf
